<resources>
    <string name="app_name">SSU:ZIP Admin</string>

    <string name="service_ready">Service is in preparation.</string>

    <!-- Typeface Path -->
    <string name="typeface_normal">fonts/NanumSquareOTFRegular.otf</string>
    <string name="typeface_bold">fonts/NanumSquareOTFBold.otf</string>
    <string name="typeface_exbold">fonts/NanumSquareOTFExtraBold.otf</string>
    <string name="typeface_loginbot">fonts/NanumSquareOTFRegular.otf</string>
    <string name="typeface_number_normal">fonts/NanumSquareOTFRegular.otf</string>
    <string name="typeface_number_bold">fonts/NanumSquareOTFBold.otf</string>

    <!-- Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>

    <!-- Application Dialog -->
    <string name="dialog_appexit_title">Application Exit</string>
    <string name="dialog_appexit_content">Do you want to exit the application?</string>

    <!-- Login Activity -->
    <string name="login_email">EMAIL</string>
    <string name="login_emailhint">Enter your email.</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_passwordhint">Enter your password.</string>
    <string name="login_loginbutton">LOGIN</string>
    <string name="login_signupbutton">Do not have an administrator account?</string>

    <!-- Login Activity Dialog -->
    <string name="login_dialog_email_input_title">Email Input</string>
    <string name="login_dialog_email_input_content">Enter your email.</string>
    <string name="login_dialog_email_format_title">Email Format</string>
    <string name="login_dialog_email_format_content">This is not an email format.</string>
    <string name="login_dialog_password_input_title">Password Input</string>
    <string name="login_dialog_password_input_content">Enter your password.</string>

    <!-- Signup Activity -->
    <string name="signup_title">Signup</string>
    <string name="signup_email">EMAIL</string>
    <string name="signup_emailhint">Enter your email.</string>
    <string name="signup_password">PASSWORD</string>
    <string name="signup_passwordhint">Enter your password.</string>
    <string name="signup_passwordconfirm">PASSWORD CONFIRM</string>
    <string name="signup_passwordconfirmhint">Enter your password again.</string>
    <string name="signup_name">NAME</string>
    <string name="signup_namehint">Enter your name.</string>
    <string name="signup_gender">SEX</string>
    <string name="signup_gender_man">MALE</string>
    <string name="signup_gender_woman">FEMALE</string>
    <string name="signup_studentnumber">STUDENT ID</string>
    <string name="signup_studentnumberhint">Enter your student/employee id.</string>
    <string name="signup_major">MAJOR</string>
    <string name="signup_continuebutton">CONTINUE</string>

    <!-- Signup Activity Dialog -->
    <string name="signup_dialog_emailinput_title">Email Input</string>
    <string name="signup_dialog_emailinput_content">Enter your email.</string>

    <string name="signup_dialog_password_title">Password Input</string>
    <string name="signup_dialog_password_content">Enter your password.</string>

    <string name="signup_dialog_passwordconfirm_title">Password Confirm Input</string>
    <string name="signup_dialog_passwordconfirm_content">Enter your password again.</string>

    <string name="signup_dialog_password_error_title">Password Not Match</string>
    <string name="signup_dialog_password_error_content">Passwords do not match.</string>

    <string name="signup_dialog_name_title">Name Input</string>
    <string name="signup_dialog_name_content">Enter your name.</string>

    <string name="signup_dialog_studentnumber_title">Student/Employee ID Input</string>
    <string name="signup_dialog_studentnumber_content">Enter your student/employee id.</string>

    <string name="signup_dialog_emailformat_title">Email Format</string>
    <string name="signup_dialog_emailformat_content">This is not an email format.</string>

    <string name="signup_dialog_gender_title">Sex Selection</string>
    <string name="signup_dialog_gender_content">Select your sex.</string>

    <!-- Authentication Activity -->
    <string name="auth_title">Verification</string>
    <string name="auth_contenttop">This app is an application that requires</string>
    <string name="auth_contentmid">user authentication from the operator.</string>
    <string name="auth_contentbot">Enter the code you have been issued for verification.</string>
    <string name="auth_accountcode">ACCOUNT CODE</string>
    <string name="auth_accountcodehint">Enter your account code.</string>
    <string name="auth_authcode">VERIFICATION CODE</string>
    <string name="auth_authcodehint">Enter your verification code.</string>
    <string name="auth_signupbutton">Authenticate and Signup</string>

    <!-- Authentication Activity Dialog -->
    <string name="authentication_dialog_accountcode_title">Account Code Input</string>
    <string name="authentication_dialog_accountcode_content">Enter your account code.</string>

    <string name="authentication_dialog_authcode_title">Verification Code Input</string>
    <string name="authentication_dialog_authcode_content">Enter your verification code.</string>

    <string name="authentication_dialog_accountcode_error_title">Account Code Error</string>
    <string name="authentication_dialog_accountcode_error_content">Account Code is not valid.</string>

    <string name="authentication_dialog_authcode_error_title">Verification Code Error</string>
    <string name="authentication_dialog_authcode_error_content">Verification Code is not valid.</string>

    <!-- Main Activity -->
    <string name="main_curevent_text">Current Events : </string>
    <string name="main_totevent_text">/10</string>
    <string name="main_admin_event_button">Manage Events</string>
    <string name="main_admin_setting_button">Settings</string>

    <string name="main_logout_dialog_title">Log Out</string>
    <string name="main_logout_dialog_content">Do you want to logout?</string>


    <!-- Event List Activity -->
    <string name="event_actionbar_title">Manage Events</string>
    <string name="event_list_text">Event List</string>
    <string name="event_curevent_text">Current Events : </string>
    <string name="event_totevent_text">Total Events : </string>
    <string name="event_addevent_button">Create Event</string>
    <string name="event_refresh_button">Refresh List</string>
    <string name="event_refresh_toast">List Refresh Executed.</string>

    <string name="event_detail_button">Details</string>
    <string name="event_result_button">Result</string>
    <string name="event_inwon_text">Person : </string>
    <string name="event_participate_text">Current : </string>
    <string name="event_myung"></string>

    <string name="event_year_text"></string>

    <!-- List 하단 범례 모음-->
    <string name="event_list_now_text"> : OnGoing</string>
    <string name="event_list_nearend_text"> : Near Deadline</string>
    <string name="event_list_end_text"> : Closed</string>

    <!-- Create Event -->
    <string name="event_create_actionbar_title">Create Event</string>
    <string name="event_create_title">Event Name</string>
    <string name="event_create_title_hint">Enter your event name.</string>
    <string name="event_create_duedate">Due Date</string>
    <string name="event_create_duedate_hint">Select the due date.</string>
    <string name="event_create_maxperson">Max Person</string>
    <string name="event_create_maxperson_hint">Enter max number of people. Example) 130</string>
    <string name="event_create_content">Event Explanation</string>
    <string name="event_create_content_hint">Enter the event explanation.</string>
    <string name="event_create_participate">Participants</string>
    <string name="event_create_building">Building Selection</string>
    <string name="event_create_selectmajor">Participants Selection</string>
    <string name="event_create_selectbuilding">Building Selection</string>
    <string name="event_create_button">Create Event</string>

    <string name="event_create_year">. </string>
    <string name="event_create_month">. </string>
    <string name="event_create_day">. </string>

    <string name="event_create_dialog_date_title">날짜 선택 오류</string>
    <string name="event_create_dialog_date_content">오늘 날짜 이후의 날짜로 선택해주세요.</string>

    <string name="event_now_creating">Saving...</string>
    <string name="event_create_success">Event Created</string>

    <!-- Event Create Dialog -->
    <string name="event_create_dialog_title_title">Event Title</string>
    <string name="event_create_dialog_title_content">Enter your event title.</string>
    <string name="event_create_dialog_maxperson_title">Maximum Number of People</string>
    <string name="event_create_dialog_maxperson_content">Enter the maximum number of people..</string>
    <string name="event_create_dialog_content_title">Event Explanation</string>
    <string name="event_create_dialog_content_content">Enter the event explanation.</string>

    <string name="event_create_dialog_major_title">Select Majors</string>
    <string name="event_create_dialog_major_content">Please select at least one major.</string>

    <string name="event_create_dialog_building_title">Select Buildings</string>
    <string name="event_create_dialog_building_content">Please select at least one building.</string>

    <!-- Event Details -->
    <string name="event_details_actionbar_title">Event Details</string>
    <string name="event_details_endevent_button">Close Event</string>
    <string name="event_details_major">Participants</string>
    <string name="event_details_building">Buildings</string>
    <string name="event_details_curtext">Proceeding</string>
    <string name="event_details_event_contenttitle">Event Contents</string>

    <!-- Event Result -->
    <string name="event_results_backbutton_text">Back</string>
    <string name="event_results_person_text">Participants</string>
    <string name="event_results_first_rank">1st</string>
    <string name="event_results_rank_list">Rank Table</string>
    <string name="event_results_rank_list_hint">Touch the list item to view the information.</string>
    <string name="event_results_info">Info.</string>
    <string name="event_results_rank_first_token">st</string>
    <string name="event_results_rank_second_token">nd</string>
    <string name="event_results_rank_third_token">rd</string>
    <string name="event_results_rank_extra_token">th</string>
    <string name="event_results_actionbar_title">Event Result</string>

    <!-- Event Result Person Info Popup -->
    <string name="event_popup_name">Name</string>
    <string name="event_popup_id">Student/Employee ID</string>
    <string name="event_popup_major">Major(Belong)</string>
    <string name="event_popup_gender">Sex</string>
    <string name="event_popup_phone">Phone Number</string>
    <string name="event_popup_ok">OK</string>
    <string name="title_activity_setting">Settings</string>

</resources>
