<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ssumunity.ssuzip_admin.LoginActivity"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/main_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_height="85dp"
        android:layout_marginTop="85dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:id="@+id/login_layout">

        <TextView
            android:text="@string/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:ems="10"
            android:id="@+id/et_email"
            android:background="@drawable/edittext_borderwhite"
            android:paddingRight="10dp"
            android:hint="@string/login_emailhint"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress" />

        <TextView
            android:text="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="text|textPassword"
            android:ems="10"
            android:id="@+id/et_password"
            android:password="false"
            android:background="@drawable/edittext_borderwhite"
            android:paddingLeft="10dp"
            android:hint="@string/login_passwordhint"
            android:layout_marginTop="5dp"
            android:layout_height="40dp"
            android:textSize="16sp" />

        <Button
            android:text="@string/login_loginbutton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:text="@string/login_signupbutton"
            android:layout_width="match_parent"
            android:id="@+id/tv_signup_click"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@drawable/signup_text_bg"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_copyright"
        android:gravity="center_horizontal"
        android:text="Copyright © 2016 SSUMUNITY All rights Reserved"
        android:textSize="10sp"
        android:textColor="#ff757575" />


</RelativeLayout>
