<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssumunity.ssuzip_admin.Activity.EventCreateThreeActivity"
    android:background="@color/colorWhite">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_above="@+id/create_button"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

            <TextView
                android:text="@string/event_create_building"
                android:layout_width="match_parent"
                android:id="@+id/tv_building"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_weight="0.61"
                android:background="@drawable/edittext_borderwhite"
                android:paddingBottom="9dp"
                android:layout_height="match_parent">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/listView_building"
                    android:divider="#00ffffff"
                    android:dividerHeight="0dp" />
            </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/event_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_button"
        android:textColor="#FF000000"
        android:textSize="14sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/main_button_bg"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp" />

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/event_now_creating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView6"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginTop="-85dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />
    </FrameLayout>

</RelativeLayout>
